--- a/templates/login.html
+++ b/templates/login.html
@@ -154,12 +154,11 @@
 <div class="login-container">
     <h2>Welcome</h2>
     <form action="#" method="POST">
-        <div class="input-field"> <p>Name:</p>
-            <p><input type="text" name = "nm"></p>
+        <div class="input-field"> 
+            <p><input  placeholder="Username" type="text" name = "nm"></p>
         </div>
         <div class="input-field">
-            <p>Password:</p>
-            <p><input type="password" name = "pw"></p>
+            <p><input placeholder="Password" type="password" name = "pw"></p>
         </div>
         <button class="login-btn">LOGIN</button>
     </form>
