--- a/templates/pages.html
+++ b/templates/pages.html
@@ -115,8 +115,9 @@
         <div class="navbar">
             <h1>Easy College</h1>
         </div>
+        <form action="#" method="POST">
         <div class="options">
-            <button class="button" onclick="alert('Bunkr Selected')">
+            <button class="button">
                 <img src="../static/images/attendance.jpeg" alt="Bunkr Icon">
                 <p>Attendance</p>
             </button>
@@ -125,6 +126,7 @@
                 <p>CGPA</p>
             </button>
         </div>
+        </form>
     </div>
 <!-- Footer -->
 <footer>
