--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -102,7 +102,7 @@
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
     padding: 10px 0;
     margin-top: 5px;
-    background: rgba(102, 217, 255, 0.08);
+    
     border-radius: 6px;
 }
 
@@ -157,6 +157,7 @@ footer .Copyright {
         {% for result in results %} 
         <div class="login-container">
             <div class="attendance">
+                <div>{{result.course_name}}</div>
                 <div>Course Code: {{ result.course_code }}</div>
                 <div>Physical Attendance: {{result.Physical_Attendance}}</div>
                 <div> Attendance With Exemption: {{result.Attendance_Exemption}}</div>
