--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -70,31 +70,32 @@
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
-    padding: 1.5rem;
+    
 }
 
 .attendance div {
     text-align: center;
     font-size: 20px;
-    padding: 6px 0;
+    margin-top: 0px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
     letter-spacing: 0.5px;
     color: white; /* Changed to white */
 }
 
-/* Course Code styling */
+/* Course name styling */
 .attendance div:nth-child(1) {
     font-weight: 600;
-    font-size: 25px;
+    font-size: 35px;
     color: #93E9BE;/* Keeping the soft light blue */
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     padding-bottom: 8px;
     margin-bottom: 5px;
+    
 }
 
 /* Result Status styling */
 .attendance div:last-child {
-    font-size: 1.6rem;
+    font-size: 20px;
     font-weight: 600;
     color:  #ADD8E6; /* Keeping the light cyan blue */
     text-transform: uppercase;
@@ -161,8 +162,13 @@ footer .Copyright {
                 <div>Course Code: {{ result.course_code }}</div>
                 <div>Physical Attendance: {{result.Physical_Attendance}}</div>
                 <div> Attendance With Exemption: {{result.Attendance_Exemption}}</div>
-                <div>{{ result.status }} :  {{ result.value}}</div>
-                
+                {% if result.exemption_bunk == "0" %}
+                    <div>{{ result.status }} : {{ result.bunk }}</div>
+                    <div>Number of Hours to Bunk Using Exemption: {{ result.exemption_bunk }}</div>
+                    <div style="font-size: px;">NOTE: It makes the physical come to 65%</div>
+                {% else %}
+                    <div>{{ result.status }} : {{ result.bunk }}</div>
+                {% endif %}
             </div>
         </div>
         {% endfor %}
