did changes on html python

--- a/templates/attendance.html
+++ b/templates/attendance.html
@@ -162,7 +162,7 @@ footer .Copyright {
                 <div>Course Code: {{ result.course_code }}</div>
                 <div>Physical Attendance: {{result.Physical_Attendance}}</div>
                 <div> Attendance With Exemption: {{result.Attendance_Exemption}}</div>
-                {% if result.exemption_bunk == "0" %}
+                {% if result.exemption_bunk != 5000 %}
                     <div>{{ result.status }} : {{ result.bunk }}</div>
                     <div>Number of Hours to Bunk Using Exemption: {{ result.exemption_bunk }}</div>
                     <div style="font-size: px;">NOTE: It makes the physical come to 65%</div>
