finished up about page

--- a/templates/login.html
+++ b/templates/login.html
@@ -185,7 +185,7 @@
         <h1>Easy College</h1>
         <div class="navbar-links">
             <a href="#">Contact</a>
-            <a href="#">About Us</a>
+            <a href="{{ url_for('about') }}" class="btn btn-secondary">About</a>
         </div>
     </nav>
 <div class="login-container">
