--- a/templates/pages.html
+++ b/templates/pages.html
@@ -121,7 +121,7 @@
                 <img src="../static/images/attendance.jpeg" alt="Bunkr Icon">
                 <p>Attendance</p>
             </button>
-            <button class="button" onclick="alert('CGPA CALC Selected')">
+            <button class="button" >
                 <img src="../static/images/cgpa-icon.png" alt="CGPA Icon">
                 <p>CGPA</p>
             </button>
