edited a small thing in the navbar

--- a/templates/login.html
+++ b/templates/login.html
@@ -188,7 +188,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="{{ url_for('pages') }}" class="easy">Easy College</a>
+        <p class="easy">Easy College</p>
         <div class="navbar-links">
             <a href="#">Contact</a>
             <a href="{{ url_for('about') }}" class="btn btn-secondary">About</a>
