--- a/templates/login.html
+++ b/templates/login.html
@@ -192,7 +192,7 @@
         <div class="navbar-links">
             <a href="#">Contact</a>
             <a href="{{ url_for('about') }}" class="btn btn-secondary">About</a>
-            <a href="{{ url_for('login') }}" class="btn btn-secondary">Logout</a>
+            <a href="{{ url_for('logout') }}" class="btn btn-secondary">Logout</a>
     
         </div>
     </nav>
